Update API and eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,8 +29,15 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-var-requires": "off",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
   },
+
   "settings": {
     "react": {
       "version": "detect"
